# splatkit

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  NORTH_STAR.md  README.md  TODOs.md  pyproject.toml  skills-lock.json
.agents/skills/auto-paper-demo/: SKILL.md
.agents/skills/implement-paper-auto/: SKILL.md
.agents/skills/marimo-batch/references/: starting-point.py
docker/: runtime.Dockerfile  smoke.Dockerfile
docs/: README.md  ember_quality_audit.md  marimo-3dv.md  marimo-3dv.py  marimo-config-gui.md  marimo-config-gui.py
docs/interactive/: marimo-3dv.py  marimo-config-gui.py
docs/interactive/ember/: README.md  contracts.py  data.py  extension.py  training.py  viewer.py
notebooks/: compare_viewers.py  gaussian_pop_viewer.py  gsplat_colmap_trainer.py  render_benchmark.py  splat_viewer.py  svraster_viewer.py  tensorboard_analysis.py  test_dataloading.py  test_foundation_dataloading.py  test_training.py
notebooks/layouts/: splat_viewer.slides.json
notes/group_talk_april_27/: presentation.py
papers/: _foam_notebook_utils.py
papers/error_mcmc/: README.md  _densification.py  notebook.py
papers/error_mcmc/defaults/: garden_debug_val.json  garden_error_mcmc.json
papers/fastergs/: README.md  config.py  notebook.py  presets.py
papers/fastergs/defaults/: garden_baseline.json  garden_debug_val.json  garden_mcmc.json  garden_vanilla_gs_ablation.json
papers/fastgs/: README.md  _densification.py  notebook.py
papers/fastgs/defaults/: garden_base.json  garden_base_native.json  garden_big.json  garden_debug_val.json  mipsplatting-big.json
papers/nht/: README.md  notebook.py
papers/nht/defaults/: garden_debug_val.json  garden_nht.json
papers/nht_fast_gs/: notebook.py
papers/nht_fast_gs/defaults/: garden_big.json  garden_debug_val.json  garden_nht_fast_gs.json
papers/powerfoam/: notebook.py
papers/powerfoam/defaults/: garden_base.json  garden_debug.json
papers/radfoam/: notebook.py
papers/radfoam/defaults/: garden_base.json  garden_debug.json
papers/scaffold_gs/: README.md  notebook.py
papers/scaffold_gs/defaults/: garden_debug_val.json  garden_scaffold_gs.json
papers/stoch3dgs/: README.md  notebook.py
papers/stoch3dgs/defaults/: garden_debug_val.json  garden_stoch.json
papers/stoch_fast_gs/: notebook.py
papers/stoch_fast_gs/defaults/: garden_big.json  garden_debug_val.json  garden_stoch_fast_gs.json
papers/svraster/: BACKEND_GAPS.md  README.md  notebook.py
papers/svraster/defaults/: garden_debug_val.json  garden_fast_render.json  garden_fast_train.json  garden_svraster.json
patches/diff-gaussian-rasterization/: 0001-modernize-packaging-and-add-splatkit-wrapper.patch
sandboxed_notebooks/: packaging_git_main.py  packaging_local.py  splat_viewer_git_main.py
scripts/: apply-third-party-patches.sh  bootstrap.sh  build_sif.py  check_submodule_checkouts.py  check_submodule_remotes.py  cleanup_stale_gpu_workers.py  install_tab_completion.py  profile_fastgs_training_matrix.py  profile_ssim_backends.py  reinstall.py  smoke_fresh_clone.py  summarize_training_profile.py  test.sh
src/splatkit/: __init__.py
src/splatkit/core/: __init__.py  capabilities.py  contracts.py  registry.py
tests/: conftest.py  test_benchmarks.py  test_contracts.py  test_data.py  test_fastergs_depth_native_backend.py  test_fastergs_depth_native_runtime.py  test_fastergs_mojo_backend.py  test_fastergs_mojo_runtime.py  test_fastergs_native_backend.py  test_fastergs_native_reference_runtime.py  test_fastergs_native_runtime.py  test_fastergs_native_training.py  test_fastgs_backend.py  test_fastgs_native_backend.py  test_foam_native_contracts.py  test_gaussian_pop_native_backend.py  test_gaussian_pop_native_runtime.py  test_gaussian_training.py  test_gaussian_wrapping_backend.py  test_gsplat_backend.py  test_io.py  test_meshification_core.py  test_nht_adapter_backend.py  test_nht_fast_gs_native_backend.py  test_nht_native_backend.py  test_nht_native_reference_parity.py  test_paper_error_mcmc.py  test_paper_fastergs.py  test_paper_fastgs.py  test_paper_nht.py  test_paper_nht_fast_gs.py  test_paper_scaffold_gs.py  test_paper_stoch3dgs.py  test_paper_stoch_fast_gs.py  test_paper_svraster.py  test_powerfoam_core.py  test_powerfoam_native_reference_runtime.py  test_radfoam_core.py  test_radfoam_native_reference_runtime.py  test_registry.py  (+13 more)
